--- a/css/mycss.css
+++ b/css/mycss.css
@@ -9,7 +9,19 @@ body, html {
 	height: 600px;
 	margin: auto;
 	top: 50%;
-	margin-top: -300px;
+	margin-top: -400px;
 
 
+}
+#instructions {
+	position: relative;
+	width: 800px;
+	height: 125px;
+	margin: auto;
+	top: 51%;
+	background-color: #4682B4;
+	border-color: #CCCCCC;
+	border-style: solid;
+	border-width: 1px;
+	text-align: center;
 }
